syntax = "proto3";

package example.app.interface.v1;
option go_package = "api";
option java_multiple_files = true;
option java_package = "com.bapis.example.app.interfaces.v1";
option objc_class_prefix = "BAPIInterfaceV1Search";


message ErrorMessage {
    int64 code = 1;
    string reason = 2;
    string message = 3;
}

message Embedded {
    bool bool_val = 1;
    int32 int32_val = 2;
    int64 int64_val = 3;
    float float_val = 4;
    double double_val = 5;
    string string_val = 6;
    repeated bool repeated_bool_val = 7;
    repeated int32 repeated_int32_val = 8;
    repeated int64 repeated_int64_val = 9;
    repeated float repeated_float_val = 10;
    repeated double repeated_double_val = 11;
    repeated string repeated_string_val = 12;
    map<string, string> map_string_val = 13;
    map<string, ErrorMessage> map_error_val = 14;
}

message SimpleMessage {
    int32 id = 1;
    int64 num = 2;
    string lang = 3;
    // form:
    // - embedded.bool_val=true
    // - embedded.int32_val=100
    // - embedded.int64_val=100
    // - embedded.float_val=100.0
    // - embedded.double_val=100.0
    // - embedded.string_val=xxx
    // - embedded.repeated_bool_val=true&embedded.repeated_bool_val=false
    // - embedded.map_string_val[key]=value
    // - embedded.map_error_val[key].code=1000
    Embedded embedded = 4;
}
